--- a/views/result.ejs
+++ b/views/result.ejs
@@ -43,27 +43,27 @@
           <section id="two">
             <h2>Search Results</h2>
             <div class="row">
-              <article class="col-6 col-12-xsmall work-item">
+              <!-- <article class="col-6 col-12-xsmall work-item"> -->
                 <a href="images/commute.gif" class="image fit thumb"><img src="images/mbta.gif" alt="" /></a>
                 <h3>MBTA Transportation</h3>
                 <p>Where to?</p>
               </article>
-              <article class="col-6 col-12-xsmall work-item">
+              <!-- <article class="col-6 col-12-xsmall work-item"> -->
                 <a href="images/uber2.gif" class="image fit thumb"><img src="images/uber.gif" alt="" /></a>
                 <h3>Uber Transportation</h3>
                 <p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
               </article>
-              <article class="col-6 col-12-xsmall work-item">
-                <a href="images/food.gif" class="image fit thumb"><img src="images/food2.gif" alt="" /></a>
+              <!-- <article class="col-6 col-12-xsmall work-item"> -->
+                <a href="/restaurants?location=<%= location %>" class="image fit thumb"><img src="images/food2.gif" alt="" /></a>
                 <h3>Restaurants</h3>
                 <p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
               </article>
-              <article class="col-6 col-12-xsmall work-item">
-                <a href="images/clerk.gif" class="image fit thumb"><img src="images/luggage.gif" alt="" /></a>
+              <!-- <article class="col-6 col-12-xsmall work-item"> -->
+                <a href="/hotels?location=<%= location %>" class="image fit thumb"><img src="images/luggage.gif" alt="" /></a>
                 <h3>Hotels</h3>
                 <p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
               </article>
-              <article class="col-6 col-12-xsmall work-item">
+              <!-- <article class="col-6 col-12-xsmall work-item">
                 <a href="images/con.jpg" class="image fit thumb"><img src="images/con.jpg" alt="" /></a>
                 <h3>Future Services</h3>
                 <p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
@@ -72,7 +72,7 @@
                 <a href="images/con.jpg" class="image fit thumb"><img src="images/con.jpg" alt="" /></a>
                 <h3>Future Services</h3>
                 <p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
-              </article>
+              </article> -->
             </div>
             <ul class="actions">
               <li><a href="/login" class="button">Log Out</a></li>
