--- a/views/result.ejs
+++ b/views/result.ejs
@@ -38,30 +38,31 @@
               <li><a href="/profile" class="button">Profile</a></li>
             </ul>
           </section>
+          
 
         <!-- Two -->
           <section id="two">
             <h2>Search Results</h2>
             <div class="row">
               <!-- <article class="col-6 col-12-xsmall work-item"> -->
-                <a href="images/commute.gif" class="image fit thumb"><img src="images/mbta.gif" alt="" /></a>
+                <!-- <a href="images/commute.gif" class="image fit thumb"><img src="images/mbta.gif" alt="" /></a>
                 <h3>MBTA Transportation</h3>
                 <p>Where to?</p>
-              </article>
+              </article> -->
               <!-- <article class="col-6 col-12-xsmall work-item"> -->
-                <a href="images/uber2.gif" class="image fit thumb"><img src="images/uber.gif" alt="" /></a>
+                <!-- <a href="images/uber2.gif" class="image fit thumb"><img src="images/uber.gif" alt="" /></a>
                 <h3>Uber Transportation</h3>
-                <p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
-              </article>
+                <p>Find an uber</p>
+              </article> -->
               <!-- <article class="col-6 col-12-xsmall work-item"> -->
-                <a href="/restaurants?location=<%= location %>" class="image fit thumb"><img src="images/food2.gif" alt="" /></a>
+                <!-- <a href="/restaurants?location=<%= location %>" class="image fit thumb"><img src="images/food2.gif" alt="" /></a>
                 <h3>Restaurants</h3>
-                <p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
-              </article>
+                <p>Find local restaurants near you</p>
+              </article> -->
               <!-- <article class="col-6 col-12-xsmall work-item"> -->
                 <a href="/hotels?location=<%= location %>" class="image fit thumb"><img src="images/luggage.gif" alt="" /></a>
                 <h3>Hotels</h3>
-                <p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+                <p>Find the best restaurants in the area</p>
               </article>
               <!-- <article class="col-6 col-12-xsmall work-item">
                 <a href="images/con.jpg" class="image fit thumb"><img src="images/con.jpg" alt="" /></a>
