--- a/views/hotels.ejs
+++ b/views/hotels.ejs
@@ -1,45 +1,50 @@
-
 <!DOCTYPE HTML>
 <html>
-	<head>
-		<title>Travola</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets3/css/main.css" />
-		<noscript><link rel="stylesheet" href="assets3/css/noscript.css" /></noscript>
-	</head>
-	<body class="is-preload">
 
-		<!-- Wrapper -->
-			<div id="wrapper">
+<head>
+	<title>Travola</title>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+	<link rel="stylesheet" href="assets3/css/main.css" />
+	<noscript>
+		<link rel="stylesheet" href="assets3/css/noscript.css" /></noscript>
+</head>
 
-				<!-- Main -->
-					<section id="main">
+<body class="is-preload">
 
-						<!-- Items -->
-							<div class="items">
+	<!-- Wrapper -->
+	<div id="wrapper">
 
-								<!-- <div class="item intro span-2">
+		<!-- Main -->
+		<section id="main">
+
+			<!-- Items -->
+			<div class="items">
+
+				<!-- <div class="item intro span-2">
 									<h1>Parallelism</h1>
 									<p>A responsive portfolio site<br />
 									template by HTML5 UP</p>
 								</div> -->
 
 
-							</div>
+			</div>
 
-						<!-- Items -->
-							<div class="items">
+			<!-- Items -->
+			<div class="items">
 
-              <%
+				<%
                 for(let i = 0; i < hotels.length; i++){
-								for(let j = 0; j < hotels[i].photos.length; j++){
+					
               %>
-							<p><%= hotels[i].photos[j] %></p>
-							<%}%>
-                  <article class="item thumb span-1"><h2><%= hotels[i].name %> </h2><a href="imagesHotel/fulls/06.jpg" class="image"><img src="<%= hotels[i].photos[1]%>" alt=""></a></article>
+                  <article class="item thumb span-1">
+					  <h2><%= hotels[i].name %> </h2>
+				<a href = "https://maps.googleapis.com/maps/api/place/photo?maxwidth=400&photoreference=<%= hotels[i].photos[0].photo_reference %>&key=AIzaSyDu7ML3Gh0Invl3_Wvx89faDViiR3r6rXM" class="image">
+					<img src = "https://maps.googleapis.com/maps/api/place/photo?maxwidth=400&photoreference=<%= hotels[i].photos[0].photo_reference %>&key=AIzaSyDu7ML3Gh0Invl3_Wvx89faDViiR3r6rXM">
+				</a>
+				</article>
 
-              <%}%>
+				<%}%>
 							</div>
 
 					</section>
