--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -30,7 +30,7 @@
           <% for(var i=0; i< messages.length; i++) {%>
           <% if (user.local.email == messages[i].name) { %>
           <li class="message">
-            <span><%= messages[i].name%></span>
+            <span hidden><%= messages[i].name%></span>
             <span class="<%= messages[i].traveled %>"><%= messages[i].msg %></span>
             <span><i class="fa fa-trash" aria-hidden="true"></i></span>
             <span><i class="fas fa-pencil-alt" aria-hidden="true"></i></span>
@@ -40,12 +40,12 @@
         </ul>
     </div>
     <div class="finder">
-      <h2>Find Restaurants Hotels Weather Uber & MBTA transportation</h2>
+      <h2>Find Hotels in your location</h2>
       <h2 class="red">FINDER<i class="fas fa-map-pin"></i></h2>
       <% if (user.local.email) { %>
       <form class="" action="/search" method="post">
         <input placeholder="Enter City" type="text" name="location" value="">
-        <button type="submit" name="button">Search</button>
+        <button type="submit" >Search</button>
       </form>
     </div>
     <% } %>
