--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,7 +12,7 @@
 <div class="container">
 
     <div class="jumbotron text-center">
-      <span>Find Restaunts Hotels Transportation</span>
+      <span>Find The best hotels in the area</span>
       <span>all in one WebApp</span>
         <h1>Travola</h1>
         <img src="img/bike.jpg" alt="21 Savage Profile Photo">
