--- a/views/result.ejs
+++ b/views/result.ejs
@@ -21,9 +21,10 @@
       <header id="header">
         <div class="inner">
           <a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
-          <h1><strong>Restaurants Hotels MBTA Uber</strong>, based on location<br/>
+          <h1><strong> Find Restaurants & Hotels</strong>, based on location<br/>
           </h1>
         </div>
+
       </header>
 
     <!-- Main -->
@@ -32,17 +33,17 @@
         <!-- One -->
           <section id="one">
             <header class="major">
-
             </header>
             <ul class="actions">
               <li><a href="/profile" class="button">Profile</a></li>
             </ul>
           </section>
-          
+
 
         <!-- Two -->
           <section id="two">
             <h2>Search Results</h2>
+
             <div class="row">
               <!-- <article class="col-6 col-12-xsmall work-item"> -->
                 <!-- <a href="images/commute.gif" class="image fit thumb"><img src="images/mbta.gif" alt="" /></a>
@@ -55,10 +56,10 @@
                 <p>Find an uber</p>
               </article> -->
               <!-- <article class="col-6 col-12-xsmall work-item"> -->
-                <!-- <a href="/restaurants?location=<%= location %>" class="image fit thumb"><img src="images/food2.gif" alt="" /></a>
+                <a href="/restaurants" class="image fit thumb"><img src="images/food2.gif" alt="" /></a>
                 <h3>Restaurants</h3>
                 <p>Find local restaurants near you</p>
-              </article> -->
+              </article>
               <!-- <article class="col-6 col-12-xsmall work-item"> -->
                 <a href="/hotels?location=<%= location %>" class="image fit thumb"><img src="images/luggage.gif" alt="" /></a>
                 <h3>Hotels</h3>
