--- a/views/food.ejs
+++ b/views/food.ejs
@@ -5,7 +5,7 @@
 		<title>Travola</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets3/css/main.css" />
+		<link rel="stylesheet" href="assets3/css/main.css"/>
 		<noscript><link rel="stylesheet" href="assets3/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
@@ -29,15 +29,21 @@
 							</div>
 
 						<!-- Items -->
-							<div class="items">
+						<div class="items">
 
-              <%
-                for(let i = 0; i < hotels.length; i++){
-              %>
-                  <article class="item thumb span-1"><h2><%= hotels[i].name %> </h2><a href="imagesHotel/fulls/06.jpg" class="image"><img src="images/thumbs/06.jpg" alt=""></a></article>
 
-              <%}%>
-							</div>
+										<% for(let i = 0; i < restaurants.length; i++){
+										%>
+							<article class="item thumb span-1">
+								<h2>
+									<%= restaurants[i].name %>
+								</h2>
+								<a href = "https://maps.googleapis.com/maps/api/place/photo?maxwidth=400&photoreference=<%= restaurants[i].photos[0].photo_reference %>&key=AIzaSyDu7ML3Gh0Invl3_Wvx89faDViiR3r6rXM" class="image">
+								<img src = "https://maps.googleapis.com/maps/api/place/photo?maxwidth=400&photoreference=<%= restaurants[i].photos[0].photo_reference %>&key=AIzaSyDu7ML3Gh0Invl3_Wvx89faDViiR3r6rXM">
+								</a>
+							</article>
+							<%}%>
+						</div>
 
 					</section>
 
