--- a/views/hotels.ejs
+++ b/views/hotels.ejs
@@ -18,30 +18,32 @@
 		<!-- Main -->
 		<section id="main">
 
-			<!-- Items -->
-			<div class="items">
-
-				<!-- <div class="item intro span-2">
-									<h1>Parallelism</h1>
-									<p>A responsive portfolio site<br />
-									template by HTML5 UP</p>
-								</div> -->
-
-
-			</div>
 
 			<!-- Items -->
 			<div class="items">
 
 				<%
-                for(let i = 0; i < hotels.length; i++){
-					
-              %>
-                  <article class="item thumb span-1">
-					  <h2><%= hotels[i].name %> </h2>
+				for(let i = 0; i < hotels.length; i++){
+				%>
+        <article class="item thumb span-1">
+					  <h2 class="rise">
+							<%= hotels[i].name %>
+						</h2>
+						<h2 class="sink">
+							<%= hotels[i].formatted_address %>
+						</h2></a>
+						<h2 class="rating">
+							<%= hotels[i].rating %>
+							<strong>
+								Star Rating
+							</strong>
+						</h2>
+
+
 				<a href = "https://maps.googleapis.com/maps/api/place/photo?maxwidth=400&photoreference=<%= hotels[i].photos[0].photo_reference %>&key=AIzaSyDu7ML3Gh0Invl3_Wvx89faDViiR3r6rXM" class="image">
-					<img src = "https://maps.googleapis.com/maps/api/place/photo?maxwidth=400&photoreference=<%= hotels[i].photos[0].photo_reference %>&key=AIzaSyDu7ML3Gh0Invl3_Wvx89faDViiR3r6rXM">
+				<img src = "https://maps.googleapis.com/maps/api/place/photo?maxwidth=400&photoreference=<%= hotels[i].photos[0].photo_reference %>&key=AIzaSyDu7ML3Gh0Invl3_Wvx89faDViiR3r6rXM">
 				</a>
+
 				</article>
 
 				<%}%>
