--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,10 +12,10 @@
 <div class="container">
 
     <div class="jumbotron text-center">
-      <span>Find The best hotels in the area</span>
+      <span>Find The best Hotels & Restaurants in the area</span>
       <span>all in one WebApp</span>
         <h1>Travola</h1>
-        <img src="img/bike.jpg" alt="21 Savage Profile Photo">
+        <img src="img/bike.jpg" alt="bike">
 
         <p>Login or Signup:</p>
 
