--- a/views/detailed.ejs
+++ b/views/detailed.ejs
@@ -64,6 +64,9 @@
         <span id="userName" data-username="<%= user[0].local.userName%>"></span>
         <span id="placeId" data-placeid="<%= place.result.place_id%>"></span>
         <button id="submitComment" type="button" name="button">Comment</button>
+        <!-- <button type="button" name="button"></button> -->
+        <span id="addToFav">Add to favorites<i class="far fa-star"></i></span>
+
         <!-- to do: can pass username & profile pic -->
       </form>
 
