--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -71,7 +71,9 @@ section, summary, time, mark, audio, video {
   border: 0;
   font-size: 100%;
   font: inherit;
-  vertical-align: baseline; }
+  vertical-align: baseline;
+ }
+
 
 article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
