--- a/public/style.css
+++ b/public/style.css
@@ -31,6 +31,16 @@
 .body{
   position: absolute;
 }
-.rev{
+ #revRed{
   color: red;
+}
+#main > section:first-child {
+    border-top: 0;
+    /* margin-top: 0; */
+    padding-top: 228px;
+}
+#main > section {
+    border-top: solid 0px #efefef;
+    margin: 0em 0 0 0;
+    padding: 0em 0 0 0;
 }
