--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -11,11 +11,11 @@
     <header id="header">
       <section id="one">
         <ul class="actions">
-          <li><a href="/login" class="button">Log Out</a></li>
+          <li><a href="/favorites" class="button">favorites</a></li>
           <!-- <h3>Recently Visited Locations</h3> -->
-
         </ul>
       </section>
+
       <div class="col-sm-6">
         <h3>Search History</h3>
         <ul class="messages">
@@ -37,6 +37,12 @@
           <% } %>
          </ul>
        </div>
+       <section id="one">
+         <ul class="actions">
+           <li><a href="/login" class="button">Log Out</a></li>
+           <!-- <h3>Recently Visited Locations</h3> -->
+         </ul>
+       </section>
     </header>
 
     <div class="row">
