--- a/views/favorites.ejs
+++ b/views/favorites.ejs
@@ -8,15 +8,7 @@
     <link rel="stylesheet" href="assets2/css/main.css"/>
   </head>
   <body class="is-preload">
-    <!-- result from search by location -->
-    <h1>Here are your results</h1>
-      <ul class="results">
-        <% for(var i=0; i< results.length; i++) {%>
-        <li class="result">
-          <span><%= results[i].name%></span>
-        </li>
-        <% } %>
-      </ul>
+
 
       <header id="header">
         <div class="inner">
@@ -42,43 +34,17 @@
 
         <!-- Two -->
           <section id="two">
-            <h2>Search Results For <span id="city"><%= location %></span> </h2>
+            <h2>Your Favorites</h2>
             <%
             for(let i = 0; i < places.length; i++){
             %>
 
             <div class="row">
-              <!-- <article class="col-6 col-12-xsmall work-item"> -->
-                <!-- <a href="images/commute.gif" class="image fit thumb"><img src="images/mbta.gif" alt="" /></a>
-                <h3>MBTA Transportation</h3>
-                <p>Where to?</p>
-              </article> -->
-              <!-- <article class="col-6 col-12-xsmall work-item"> -->
-                <!-- <a href="images/uber2.gif" class="image fit thumb"><img src="images/uber.gif" alt="" /></a>
-                <h3>Uber Transportation</h3>
-                <p>Find an uber</p>
-              </article> -->
-              <!-- <article class="col-6 col-12-xsmall work-item"> -->
-
-                <a href="/restaurants?location=<%= location %>" class="image fit thumb"><img src="images/food2.gif" alt="" /></a>
+            
                 <h3><%= places[i].name %></h3>
-                <p>Find local restaurants near you</p>
+                <a href="<%= places[i].website %>" ><img src = "https://maps.googleapis.com/maps/api/place/photo?maxwidth=400&photoreference=<%= places[i].photos[0].photo_reference %>&key=AIzaSyDu7ML3Gh0Invl3_Wvx89faDViiR3r6rXM"></a>
               </article>
-              <!-- <article class="col-6 col-12-xsmall work-item"> -->
-                <!-- <a href="/hotels?location=<%= location %>" class="image fit thumb"><img src="images/luggage.gif" alt="" /></a>
-                <h3>Hotels</h3>
-                <p>Find the best restaurants in the area</p>
-              </article> -->
-              <!-- <article class="col-6 col-12-xsmall work-item">
-                <a href="images/con.jpg" class="image fit thumb"><img src="images/con.jpg" alt="" /></a>
-                <h3>Future Services</h3>
-                <p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
-              </article>
-              <article class="col-6 col-12-xsmall work-item">
-                <a href="images/con.jpg" class="image fit thumb"><img src="images/con.jpg" alt="" /></a>
-                <h3>Future Services</h3>
-                <p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
-              </article> -->
+
 
             </div>
             <%}%>
@@ -86,44 +52,6 @@
               <li><a href="/login" class="button">Log Out</a></li>
             </ul>
           </section>
-
-        <!-- Three -->
-          <!-- <section id="three">
-            <h2>Get In Touch</h2>
-            <p>Accumsan pellentesque commodo blandit enim arcu non at amet id arcu magna. Accumsan orci faucibus id eu lorem semper nunc nisi lorem vulputate lorem neque lorem ipsum dolor.</p>
-            <div class="row">
-              <div class="col-8 col-12-small">
-                <form method="post" action="#">
-                  <div class="row gtr-uniform gtr-50">
-                    <div class="col-6 col-12-xsmall"><input type="text" name="name" id="name" placeholder="Name" /></div>
-                    <div class="col-6 col-12-xsmall"><input type="email" name="email" id="email" placeholder="Email" /></div>
-                    <div class="col-12"><textarea name="message" id="message" placeholder="Message" rows="4"></textarea></div>
-                  </div>
-                </form>
-                <ul class="actions">
-                  <li><input type="submit" value="Send Message" /></li>
-                </ul>
-              </div>
-              <div class="col-4 col-12-small">
-                <ul class="labeled-icons">
-                  <li>
-                    <h3 class="icon solid fa-home"><span class="label">Address</span></h3>
-                    1234 Somewhere Rd.<br />
-                    Nashville, TN 00000<br />
-                    United States
-                  </li>
-                  <li>
-                    <h3 class="icon solid fa-mobile-alt"><span class="label">Phone</span></h3>
-                    000-000-0000
-                  </li>
-                  <li>
-                    <h3 class="icon solid fa-envelope"><span class="label">Email</span></h3>
-                    <a href="#">hello@untitled.tld</a>
-                  </li>
-                </ul>
-              </div>
-            </div>
-          </section> -->
         </div>
 
       <footer id="footer">
