--- a/views/hotels.ejs
+++ b/views/hotels.ejs
@@ -28,7 +28,7 @@
         <article class="item thumb span-1">
 					  <h2 class="rise">
 							<%= hotels[i].name %>
-							<a id="revRed" class="rev" href="/hotels/<%= hotels[i].place_id %>?photo=<%= hotels[i].photos[0].photo_reference %>"><span id="revRed" class="rev">----->REVIEWS</span></a>
+							<a id="revRed" class="rev" href="/hotels/<%= hotels[i].place_id %>?photo=<%= hotels[i].photos[0].photo_reference %>"><span id="revRed" class="rev">REVIEWS</span></a>
 						</h2>
 
 						<h2 class="sink">
